# scratchpad

./: change_author_email.sh  git_rewrite_author_name.sh
CRC/: .gitignore  crc.c  makefile  output_crc.txt  testCrc.c
CRC based hash/: crc32.h  poller.cpp
CRC_based_hash/: crc32.cpp  poller.h
base64_decode/: base64_decode.py  input_ascii.txt  packed_struct.txt
cmake_test/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  TutorialConfig.h  cmake_install.cmake  tutorial.cpp
dbusTest/: .gitignore  dbusTest.c  makefile
dlopen_example/: Makefile  dlopen_sample
general_c_testing/: .gitignore  const_test  const_test.c  hash_function.c  makefile  nodeID.c  nodeID.h  payload.h  ptr.c  signal_test.c  sort_test  sorting.c  test  test.c  union_test  union_test.c
general_c_testing/circularBuffer/: .gitignore  Makefile  circularBuffer.c  circularBuffer.h  pythonUnitTest.py  test.c
general_c_testing/scratchtest/: makefile  test.c
getoptTest/: getopt  getopt.c  getopt.c.gcov  getopt.gcda  getopt.gcno  makefile
hashing_test/: hash  hash.c  hashlib.h  makefile
linker_loader/: .gitignore  createStatLib.sh  libprint1.c  lkr  lkr.c  makefile
python_scratchpad/: test.py
root/: .gdbinit  kernel-ASST2  sys161-asst2.conf  test_iterative_write  test_sparse_file  test_write
root/hostbin/: host-dumpsfs  host-hash  host-mksfs  host-poisondisk  host-psort  host-sfsck  host-usemtest
root/sbin/: dumpsfs  mksfs  sfsck
root/testbin/: add  argtest  asst2  badcall  bigexec  bigfile  bigfork  bigseek  bloat  conman  crash  (+35 more)
systemCalls/: makefile  statTest  statTest.c
(+12 files in other folders)
